[gd_scene load_steps=3 format=3 uid="uid://combat_hud_001"]

[ext_resource type="Script" path="res://player/CombatHUD.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="stamina_style"]
bg_color = Color(0.2, 0.8, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="power_style"]
bg_color = Color(0.9, 0.6, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="health_style"]
bg_color = Color(0.8, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="CombatHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 320.0
offset_bottom = -20.0
grow_vertical = 0

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Health"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false
theme_override_styles/fill = SubResource("health_style")

[node name="StaminaLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Stamina"
horizontal_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 25)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false
theme_override_styles/fill = SubResource("stamina_style")

[node name="PowerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Power"
horizontal_alignment = 1

[node name="PowerBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 25)
layout_mode = 2
max_value = 100.0
value = 0.0
show_percentage = false
theme_override_styles/fill = SubResource("power_style")

[node name="CombatStateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Ready"
horizontal_alignment = 1

[node name="ControlsHint" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -180.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="Title" type="Label" parent="ControlsHint"]
layout_mode = 2
text = "COMBAT CONTROLS"
horizontal_alignment = 1

[node name="LightAttack" type="Label" parent="ControlsHint"]
layout_mode = 2
text = "Left Mouse - Light Attack (15 Stamina)"

[node name="HeavyAttack" type="Label" parent="ControlsHint"]
layout_mode = 2
text = "R Key - Heavy Attack (35 Stamina)"

[node name="Block" type="Label" parent="ControlsHint"]
layout_mode = 2
text = "Right Mouse - Block (5/s drain)"

[node name="Dodge" type="Label" parent="ControlsHint"]
layout_mode = 2
text = "C Key - Dodge (25 Stamina)"

[node name="Sprint" type="Label" parent="ControlsHint"]
layout_mode = 2
text = "Shift - Sprint"

[node name="Info" type="Label" parent="ControlsHint"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "TIP: Block at hit moment for Parry!"
horizontal_alignment = 1

